2017.11/_sources/plugins/available/feature-table/filter-samples.txt
filter-samples: Filter samples from table
=========================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table filter-samples [OPTIONS]

     Filter samples from table based on frequency and/or metadata. Any features
     with a frequency of zero after sample filtering will also be removed. See
     the filtering tutorial on https://docs.qiime2.org for additional details.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency]
                                     [required]
                                     The feature table from which
                                     samples should be filtered.
     --p-min-frequency INTEGER       [default: 0]
                                     The minimum total frequency
                                     that a sample must have to be retained.
     --p-max-frequency INTEGER       [optional]
                                     The maximum total frequency that
                                     a sample can have to be retained. If no
                                     value is provided this will default to
                                     infinity (i.e., no maximum frequency filter
                                     will be applied).
     --p-min-features INTEGER        [default: 0]
                                     The minimum number of features
                                     that a sample must have to be retained.
     --p-max-features INTEGER        [optional]
                                     The maximum number of features
                                     that a sample can have to be retained. If no
                                     value is provided this will default to
                                     infinity (i.e., no maximum feature filter
                                     will be applied).
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [optional]
                                     Sample metadata used with `where` parameter
                                     when selecting samples to retain, or with
                                     `exclude_ids` when selecting samples to
                                     discard.
     --p-where TEXT                  [optional]
                                     SQLite WHERE clause specifying
                                     sample metadata criteria that must be met to
                                     be included in the filtered feature table.
                                     If not provided, all samples in `metadata`
                                     that are also in the feature table will be
                                     retained.
     --p-exclude-ids / --p-no-exclude-ids
                                     [default: False]
                                     If true, the samples
                                     selected by `metadata` or `where` parameters
                                     will be excluded from the filtered table
                                     instead of being retained.
     --o-filtered-table PATH         Artifact: FeatureTable[Frequency] [required
                                     if not passing --output-dir]
                                     The resulting
                                     feature table filtered by sample.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Filter samples from table

   Filter samples from table based on frequency and/or metadata. Any features
   with a frequency of zero after sample filtering will also be removed. See
   the filtering tutorial on https://docs.qiime2.org for additional details.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table from which samples should be filtered.
   min_frequency : Int, optional
       The minimum total frequency that a sample must have to be retained.
   max_frequency : Int, optional
       The maximum total frequency that a sample can have to be retained. If
       no value is provided this will default to infinity (i.e., no maximum
       frequency filter will be applied).
   min_features : Int, optional
       The minimum number of features that a sample must have to be retained.
   max_features : Int, optional
       The maximum number of features that a sample can have to be retained.
       If no value is provided this will default to infinity (i.e., no maximum
       feature filter will be applied).
   metadata : Metadata, optional
       Sample metadata used with `where` parameter when selecting samples to
       retain, or with `exclude_ids` when selecting samples to discard.
   where : Str, optional
       SQLite WHERE clause specifying sample metadata criteria that must be
       met to be included in the filtered feature table. If not provided, all
       samples in `metadata` that are also in the feature table will be
       retained.
   exclude_ids : Bool, optional
       If true, the samples selected by `metadata` or `where` parameters will
       be excluded from the filtered table instead of being retained.

   Returns
   -------
   filtered_table : FeatureTable[Frequency]
       The resulting feature table filtered by sample.</pre>
       </div>
     </div>
   </div>